[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/level3_cop.gd" id="1"]
[ext_resource type="PackedScene" path="res://Level3/Ticket.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Level3/Handcuff.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Level3/SirenCone.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Level3/PoliceCar.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Level3/Microphone.tscn" id="6"]

[node name="Level3_Cop" type="Node2D"]
script = ExtResource("1")
ticket_scene = ExtResource("2")
handcuff_scene = ExtResource("3")
siren_scene = ExtResource("4")
police_car_scene = ExtResource("5")
microphone_scene = ExtResource("6")

[node name="PlayerStart" type="Marker2D" parent="."]
position = Vector2(64, -64)

[node name="UI" type="CanvasLayer" parent="."]
layer = 1

[node name="HintLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 16.0
text = ""
visible = false

[node name="FadeLayer" type="CanvasLayer" parent="UI"]
layer = 100

[node name="ColorRect" type="ColorRect" parent="UI/FadeLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0,0,0,0)

[node name="Spawners" type="Node2D" parent="."]

[node name="TicketSpawner" type="Node2D" parent="Spawners"]
position = Vector2(1100, -64)

[node name="Timer" type="Timer" parent="Spawners/TicketSpawner"]
wait_time = 2.0
autostart = false
one_shot = false

[node name="HandcuffSpawner" type="Node2D" parent="Spawners"]
position = Vector2(1300, -200)

[node name="Timer" type="Timer" parent="Spawners/HandcuffSpawner"]
wait_time = 3.0
autostart = false
one_shot = false

[connection signal="timeout" from="Spawners/TicketSpawner/Timer" to="." method="_on_TicketTimer_timeout"]
[connection signal="timeout" from="Spawners/HandcuffSpawner/Timer" to="." method="_on_HandcuffTimer_timeout"]
